kubectl/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll
spec:
  selector:
    app: poll
  ports:
  - name: http
    port: 80
    targetPort: 80
