kubectl/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  selector:
    app: result
  ports:
  - name: http
    port: 80
    targetPort: 80
