kubectl/result.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: result
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: result.dop.io
    http:
      paths:
      - path: /
        backend:
          serviceName: result
          servicePort: http
